# simple_static_analysis

./: CMakeLists.txt  main.cpp
apps/: app_callgraph.cpp  callgraph.cpp
example/: Makefile  example.cpp  example.ll
examples/function_pointer/: Makefile  function_pointer.cpp  function_pointer.ll
examples/nested_calls/: Makefile  nested_calls.ll
examples/virtual_functions/: Makefile  virtual_functions.cpp  virtual_functions.ll
ssa/: base.hpp  callgraph.hpp  callgraph_builder.cpp  callgraph_builder.hpp  llvm_ir.hpp  logger.hpp
